.metadata/.plugins/org.eclipse.cdt.ui/Practice.build.log
16:13:16 **** Incremental Build of configuration Debug for project Practice ****
make all 
Building file: ../main.cpp
Invoking: GCC C++ Compiler
g++ -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"main.d" -MT"main.o" -o "main.o" "../main.cpp"
../main.cpp:3:1: error: expected unqualified-id
public ListNode insertionSortList(ListNode head) {
^
1 error generated.
make: *** [main.o] Error 1

16:13:16 Build Finished (took 450ms)

